# ai-bitcoin-advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  websocket.py
db/: chroma.sqlite3
src/bitcoin_trader_flow/: main.py
src/bitcoin_trader_flow/crews/tracker_crew/: tracker_crew.py
src/bitcoin_trader_flow/crews/tracker_crew/config/: agents.yaml  tasks.yaml
