[project]
name = "bitcoin_trader_flow"
version = "0.1.0"
description = "bitcoin_trader_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
kickoff = "bitcoin_trader_flow.main:kickoff"
run_crew = "bitcoin_trader_flow.main:kickoff"
plot = "bitcoin_trader_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
